test/compile-fail/resolution/conflicts/fields/top.rhdl
struct a {}
struct b { a: a, a: a }
